fix the widget header vertical alignment

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -112,7 +112,7 @@ h1 {
 
 h2 {
     font-size: 24px;
-    line-height: 30px;
+    line-height: 20px;
 }
 
 h3 {
